Added basic APIs:
