# api/swagger/swagger.yaml
@@ -161,6 +161,32 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorSchema"
+  /users/{userId}/followers:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: users
+    get:
+      description: Get details of user's followers
+      # used as the method name of the controller
+      operationId: userFollowers
+      parameters:
+        - name: userId
+          in: path
+          type: integer
+          required: true
+        - name: query
+          in: query
+          type: string
+          required: false
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorSchema"
   
   /swagger:
     x-swagger-pipe: swagger_raw
